# flatmates_app

./: class_pdf_contents.py  classes_flatemates.py  main.py  pyproject.toml
docs/: designs.txt  objectif.txt
ressources/: decembre_2022
